--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:backgroundTint="#FFFFFF"
-                android:text="Submit"
+                android:text="@string/submit"
                 android:textAllCaps="false"
                 android:background="@drawable/button_background"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -58,8 +58,8 @@
             app:tabTextColor="#FFFFFF" />
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/view_pager"
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
