--- a/app/src/main/res/layout/fragment_confirm_dialog.xml
+++ b/app/src/main/res/layout/fragment_confirm_dialog.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:contentDescription="cancel icon"
+        android:contentDescription="@string/cancel_icon"
         android:src="@drawable/ic_cancel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:text="Are you sure?"
+        android:text="@string/are_you_sure"
         android:textSize="28sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,7 +38,7 @@
         android:backgroundTint="#FFAB40"
         android:paddingStart="60dp"
         android:paddingEnd="60dp"
-        android:text="Yes"
+        android:text="@string/yes"
         android:textAllCaps="false"
         android:textColor="@color/textColor"
         android:textColorHighlight="@color/colorAccent"
