--- a/app/src/main/res/layout/fragment_submit.xml
+++ b/app/src/main/res/layout/fragment_submit.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000"
-    tools:context=".ui.submission.SubmitActivity">
+    tools:context=".ui.submission.SubmitFragment">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBar"
